# neon_gridiron

./: .gitignore  Dockerfile  README.md  apply_and_push.cmd  mypy.ini  publish_branch_to_main.cmd  pyproject.toml  run_ultra.py
.github/workflows/: ci.yml
ai/: cli.py
ai/brain/: opponent_model.py  planner.py
ai/env/: __init__.py  neon_env.py
ai/explainability/: reason_codes.py  tactical_analyst.py
ai/exploit/: detectors.py
ai/tactics/: __init__.py  coach.py  formation.py
ai/training/: curiosity.py  curriculum.py  dreamer.py  elo.py  eval.py  league.py  league_matching.py  orchestrator.py  pbt.py  reward_engine.py  rewards.py  self_play.py
configs/: abilities_core.yaml  attributes.yaml  loader.py  match_rules.yaml  rewards.yaml
configs/abilities/: abilities_core.yaml  abilities_list.yaml
configs/ai/: env_actions.json  env_observations.json  reward_sets.yaml  xg_metrics.yaml
configs/penalties/: penalty_points.yaml
docs/: Architecture.md  COMMIT_PROOF_RU.md  GITHUB_VISIBILITY.md  GLOBAL_UPGRADE_ANALYSIS_RU.md  Implementation_Plan.md  MAIN_BRANCH_WORKFLOW_RU.md  MASTER_PROMPT_GAME_UPGRADE_RU.md  Project_Analysis.md  WINDOWS_APPLY_FIX.md  WINDOWS_ONE_COMMAND.md
godot_client/: project.godot
godot_client/materials/: NeonField.gdshader  neon_grid.gdshader  neon_grid.gdshader.uid
godot_client/scenes/: Arena.tscn
godot_client/scripts/: CinematicDirector.gd  CrowdSystem.gd  CrowdSystem.gd.uid  DiegeticUI.gd  LiveOpsDashboard.gd  MsgPack.gd  NetworkSync.gd  NetworkSync.gd.uid  PostProcessing.gd  TVCamera.gd  TVCamera.gd.uid  ThoughtVisualizer.gd
liveops/: spectacle_score.yaml
ml_environment/: pbt_league.py  run_all.bat  start_league.py  telemetry.py  test_env.py  train_ppo.py
patches/: README.md  e753ff6_restore_baseline.patch
patches/season_01/: overrides.yaml  patch_notes.md
patches/season_02/: overrides.yaml  patch_notes.md
patches/season_03/: overrides.yaml  (+1 more)
schemas/: event_schema.json
scripts/: benchmark_ultra.py  benchmark_vec_env.py  cleanup.py  enforce_main_branch.sh  league_db.py  live_runner.py  local_apply_baseline.py  publish_branch_to_main.cmd  smoke_test_ultra.py  stress_test_ultra.py  windows_apply_and_push.cmd
server/: app.py  bridge.py  frame_normalize.py  frame_protocol.py  udp_ingest.py  ws_hub.py
sim/: serialization.py
telemetry/: frame.py  logger.py  metrics_spectacle.py  metrics_xg.py  udp.py
tests/: test_basic.py  test_determinism.py  test_smoke_env.py  test_strict_determinism.py  test_tactics.py
tools/: live_viewer.py  replay_diff.py  validate_configs.py
ui/: dashboard.html  package-lock.json  package.json  tailwind.config.js
(+16 files in other folders)
